Update README to add current status of project and add link to Intuit's API.

--- a/README
+++ b/README
@@ -1,5 +1,22 @@
 ============================= Spring Social Intuit ===========================
-qTo check out the project and build from source, do the following:
+This is an intial start for a Spring Social Connection to Intuit Quickbooks
+using there Intuit Partner Platform Data Service for QuickBooks Online. This service
+support OAuth version 1 and has been modeled off the Twitter integration provided by
+spring.
+
+You can find further documentation of Intuit's QuickBooks Online API at
+https://ipp.developer.intuit.com/0010_Intuit_Partner_Platform/0050_Data_Services/0400_QuickBooks_Online
+
+Currently supported objects are:-
+* Account
+* CompanyMetaData
+* Customer
+* Invoice
+* Item
+* Payment
+* PaymentMethod
+
+To check out the project and build from source, do the following:
 
  git clone --recursive git://github.com/jeffxor/spring-social-intuit.git
  cd spring-social-intuit
